--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -418,6 +418,7 @@ extern "C"
     GNUTLS_HANDSHAKE_CERTIFICATE_VERIFY = 15,
     GNUTLS_HANDSHAKE_CLIENT_KEY_EXCHANGE = 16,
     GNUTLS_HANDSHAKE_FINISHED = 20,
+    GNUTLS_HANDSHAKE_CERTIFICATE_STATUS = 22,
     GNUTLS_HANDSHAKE_SUPPLEMENTAL = 23,
     GNUTLS_HANDSHAKE_CHANGE_CIPHER_SPEC = 254,
     GNUTLS_HANDSHAKE_CLIENT_HELLO_V2 = 1024,
@@ -960,10 +961,17 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_status_request_ocsp_server (gnutls_session_t session,
 				 gnutls_status_request_ocsp_func ocsp_func,
 					 void *ptr);
+
+  int gnutls_status_request_ocsp_server_file (gnutls_session_t session,
+				   const char* response_file,
+				   unsigned int flags);
+
   int gnutls_status_request_ocsp_client (gnutls_session_t session,
 					 gnutls_datum_t *responder_id,
 					 size_t responder_id_size,
 					 gnutls_datum_t *request_extensions);
+
+  int gnutls_status_request_get_ocsp (gnutls_session_t session, gnutls_datum_t *response);
 
 /* if you just want some defaults, use the following.
  */
