Updated gnulib and added hash-pjw-bare

--- a/gl/tests/Makefile.am
+++ b/gl/tests/Makefile.am
@@ -103,7 +103,7 @@ EXTRA_DIST += test-base64.c macros.h
 
 ## begin gnulib module binary-io
 
-libtests_a_SOURCES += binary-io.h
+libtests_a_SOURCES += binary-io.h binary-io.c
 
 ## end   gnulib module binary-io
 
