--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -76,7 +76,7 @@ COBJECTS = gnutls_record.c gnutls_compress.c debug.c gnutls_cipher.c	\
 	system.c gnutls_str.c gnutls_state.c gnutls_x509.c		\
 	gnutls_rsa_export.c gnutls_helper.c gnutls_supplemental.c	\
 	random.c crypto-api.c gnutls_privkey.c gnutls_pcert.c		\
-	gnutls_pubkey.c locks.c hash.c gnutls_dtls.c system_override.c	\
+	gnutls_pubkey.c locks.c gnutls_dtls.c system_override.c	\
 	crypto-backend.c verify-tofu.c pin.c
 
 if ENABLE_TROUSERS
@@ -103,7 +103,7 @@ HFILES = abstract_int.h debug.h gnutls_compress.h gnutls_cipher.h	\
 	gnutls_state.h gnutls_x509.h crypto-backend.h			\
 	gnutls_rsa_export.h gnutls_srp.h auth/srp.h auth/srp_passwd.h	\
 	gnutls_helper.h gnutls_supplemental.h crypto.h random.h system.h\
-	locks.h gnutls_mbuffers.h hash.h gnutls_ecc.h pin.h
+	locks.h gnutls_mbuffers.h gnutls_ecc.h pin.h
 
 if ENABLE_PKCS11
 HFILES += pkcs11_int.h
