changed generation of manpages.

--- a/.gitignore
+++ b/.gitignore
@@ -593,3 +593,4 @@ tests/chainverify-unsorted
 tests/mini-dtls-heartbeat
 tests/mini-handshake-timeout
 tests/mini-x509-callbacks
+doc/manpages/stamp_mans
