--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ configure
 doc/Makefile
 doc/Makefile.in
 doc/abstract-api.texi
+doc/dane-api.texi
 doc/algorithms.texi
 doc/compat-api.texi
 doc/core.c.texi
@@ -122,6 +123,7 @@ doc/manpages/gnutls-cli-debug.1
 doc/manpages/gnutls-cli.1
 doc/manpages/gnutls-serv.1
 doc/manpages/gnutls_*.3
+doc/manpages/dane_*.3
 doc/manpages/ocsptool.1
 doc/manpages/p11tool.1
 doc/manpages/psktool.1
@@ -594,3 +596,4 @@ tests/mini-dtls-heartbeat
 tests/mini-handshake-timeout
 tests/mini-x509-callbacks
 doc/manpages/stamp_mans
+libdane/libdane.la
