removed old file

--- a/lib/minitasn1/Makefile.am
+++ b/lib/minitasn1/Makefile.am
@@ -29,4 +29,4 @@ noinst_LTLIBRARIES = libminitasn1.la
 
 libminitasn1_la_SOURCES = libtasn1.h gstr.h int.h parser_aux.h		\
         structure.h element.h decoding.c gstr.c errors.c parser_aux.c	\
-        structure.c element.c coding.c version.c hash.c
+        structure.c element.c coding.c version.c
